--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,8 +418,35 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Hero\ img.jpg") top right;
+  
+  background: url("../img/mdr\ illas.png") top right;
+  background-color: #AF203E;
   background-size: cover;
+}
+.img{
+  position: absolute;
+  width: 500px;
+  right: 0px;
+  bottom: 0px;
+  transition: 1s;
+}
+#hero .back{
+  position: absolute;
+  width: 500px;
+  right: 0px;
+  bottom: 0px;
+  transition: 1s;
+}
+#hero .img:hover .back{
+  width: 550px;
+  bottom: 30px;
+}
+#hero .forent{
+  position: absolute; 
+  width: 350px;
+  right: 0px;
+  bottom: 0px;
+  transition: 1s;
 }
 
 #hero .container {
@@ -433,7 +460,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-#hero h1 {
+#hero h1 {z-index: 10;
   margin: 0;
   font-size: 48px;
   font-weight: 700;
@@ -473,7 +500,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 992px) {
-  #hero:before {
+  #hero::before {
     content: "";
     background: rgba(255, 255, 255, 0.8);
     position: absolute;
@@ -481,17 +508,25 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
   }
   #hero h1 {
+    z-index: 1000;
     color: #272727;
     font-size: 28px;
     line-height: 36px;
   }
   #hero h2 {
-    
     color: #888888;
     font-size: 18px;
     line-height: 24px;
+  }
+  .container{
+    z-index: 10;
+    text-align: center;
+  }
+  .img{
+    z-index: 0;
   }
 }
 
