--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,9 +418,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  
-  background: url("../img/mdr\ illas.png") top right;
-  background-color: #AF203E;
+  background: url("../img/Hero\ img.jpg") top right;
   background-size: cover;
 }
 .img{
@@ -430,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0px;
   transition: 1s;
 }
-#hero .back{
+/* #hero .back{
   position: absolute;
   width: 500px;
   right: 0px;
@@ -447,7 +445,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0px;
   bottom: 0px;
   transition: 1s;
-}
+} */
 
 #hero .container {
   padding-top: 70px;
@@ -504,7 +502,7 @@ h1, h2, h3, h4, h5, h6 {
     content: "";
     background: rgba(255, 255, 255, 0.8);
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     top: 0;
     left: 0;
     right: 0;
